<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forget_password"
    android:background="@color/appbackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="start"
        android:background="@color/appbackground"
        android:id="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:layout_gravity="center" />


    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/Forget_password_email"
                android:layout_width="@dimen/_205sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:paddingStart="@dimen/_20sdp"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/lightgray"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat"
                android:background="@drawable/btn"
                android:inputType="phone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>

            <Button
                android:id="@+id/verify_phone"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn3"
                android:text="@string/verify"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>