<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Setting_Fragment"
    android:background="@color/appbackground"
    android:orientation="vertical"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_image"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ahmed_hesham"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


            <Space
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mail_profile"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ahmedhesham_gmail_com"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                tools:ignore="RtlCompat"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_profile"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="@dimen/_10sdp"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01111111111"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            tools:ignore="RtlCompat"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_profile"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6th_october_city_6october_street_building_25"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                tools:ignore="RtlCompat"
                />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/appbackground"
        tools:ignore="RtlCompat"
        android:layout_gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            android:background="@drawable/btn5"
            android:gravity="center"
            android:id="@+id/go_to_edit_profile">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"/>

            <Space
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>