<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    tools:context=".Edit_profile"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="start"
        android:background="@color/appbackground"
        android:id="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/profile_image" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/plussss"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_90sdp"
                tools:ignore="RtlCompat" />

        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUname"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/my_shape"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:paddingStart="@dimen/_20sdp"
                tools:ignore="RtlCompat"
                android:hint="UserName"
                android:textColorHint="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUemail"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/my_shape"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:paddingStart="@dimen/_20sdp"
                tools:ignore="RtlCompat"
                android:hint="Email"
                android:textColorHint="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUphone"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/my_shape"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:paddingStart="@dimen/_20sdp"
                tools:ignore="RtlCompat"
                android:hint="@string/phone_number"
                android:textColorHint="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/my_shape"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:paddingStart="@dimen/_20sdp"
                tools:ignore="RtlCompat"
                android:hint="@string/adress"
                android:textColorHint="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"/>

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:background="@drawable/btn2"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
