<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact_us"
    android:background="@color/appbackground"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="start"
        android:background="@color/appbackground"
        android:id="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:id="@+id/addAd"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_25sdp"
            android:layout_centerInParent="true"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_40sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_name"
                        android:layout_toRightOf="@+id/space_contact"
                        android:id="@+id/contact_text"
                        android:textSize="@dimen/_12ssp"
                        android:layout_centerInParent="true"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/phone"
                            android:id="@+id/aid"/>

                        <Space
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/about_id"
                            android:id="@+id/bid"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_01111111111"
                            android:layout_toRightOf="@+id/space_about"
                            android:id="@+id/btext"
                            android:textSize="@dimen/_12ssp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/whatsapp"
                            android:id="@+id/cid"/>

                        <Space
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/cid"
                            android:id="@+id/cabout"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_01111111111"
                            android:layout_toRightOf="@+id/cabout"
                            android:id="@+id/ctext"
                            android:textSize="@dimen/_12ssp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/mail"
                            android:id="@+id/about_id"/>

                        <Space
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/about_id"
                            android:id="@+id/space_about"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e_mail_gmail_com"
                            android:layout_toRightOf="@+id/space_about"
                            android:id="@+id/about_text"
                            android:textSize="@dimen/_12ssp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>